--- a/Estilos.css
+++ b/Estilos.css
@@ -28,3 +28,8 @@
     text-align: center;
     margin-left: 5px;
 }
+.contenedor2{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
