--- a/Estilos.css
+++ b/Estilos.css
@@ -31,13 +31,24 @@
     padding-top: 30px;
     font-style: bold;    
 }
+.edad{
+    background-color: rgb(235, 83, 141);
+}
 .habilidades{
     width:50%;
-    padding: 35px;
+    padding-top:5px;
     text-align: center;
     margin-left: 5px;
     font-style: bold;
+    display: flex;
+    img{
+        width: 100px;
+    }
 }
+.textoHabilidades{
+    padding-top: 30px;
+}
+
 .contenedor2{
     display: flex;
     flex-direction: column;
@@ -77,4 +88,27 @@
 
 .cont2y3{
     display:flex;
+    
+}
+.imag_habilidades{
+    display: flex;
+   padding: 5px;
+   width: 90%;
+   border: 2px solid rgb(190, 108, 245);
+}
+.imag_educacion{
+    
+    padding: 5px;
+    border-radius: 50px;
+
+    background-color: rgb(252, 192, 239);
+}
+.educ{
+    width: 50px;
+    margin: auto;  
+    display: block;
+}
+.estudios{
+    text-align: center;
+    font-size: x-large;
 }
