--- a/Estilos.css
+++ b/Estilos.css
@@ -29,7 +29,8 @@
 .textoAcercademi{
     
     padding-top: 30px;
-    font-style: bold;    
+    font-style: bold;   
+    font-size: 30px; 
 }
 
 .habilidades{
@@ -45,6 +46,8 @@
 }
 .textoHabilidades{
     padding-top: 30px;
+    font-size: 30px;
+    
 }
 
 .contenedor2{
@@ -58,12 +61,15 @@
         text-align: left;
     }
     margin-right: 5px;
+    font-size: 20px;
 }
 .Aportes{
     text-align: center;
+    font-size: 30px;
    
     .formacion{
         color: black;
+        font-size: 20px;
     }
 
  
@@ -71,6 +77,7 @@
 
 .CompetenciasGenerales{
     text-align: center;
+    font-size: 30px;
 
     .items2{
         text-align: left;
@@ -93,6 +100,12 @@
    padding: 5px;
    width: 90%;
   
+}
+.matematica{
+    font-size: 30px;
+}
+.compe{
+    font-size: 30px;
 }
 .imag_educacion{
     
@@ -154,4 +167,16 @@
 }
 .linkedin{
     width: 50px;
+}
+.items{
+    font-size: 20px;
+}
+.items2{
+    font-size: 20px;
+}
+.items3{
+    font-size: 20px;
+}
+.items4{
+    font-size: 20px;
 }
