--- a/Estilos.css
+++ b/Estilos.css
@@ -167,7 +167,14 @@
     text-size-adjust: 200px;
 }
 .linkedin{
-    width: 50px;
+    width: 40px;
+    transition: 0.5s;
+
+}
+.linkedin:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
+
 }
 .items{
     font-size: 20px;
@@ -180,4 +187,12 @@
 }
 .items4{
     font-size: 20px;
+}
+a{
+    color:rgb(189, 23, 87);
+    text-decoration: none;
+}
+a:hover{
+    color:rgb(219, 99, 145);
+    text-decoration: underline;
 }
